manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameserver-api
spec:
  selector:
    matchLabels:
      app: gameserver-api
  template:
    metadata:
      labels:
        app: gameserver-api
    spec:
      # https://documentation.commvault.com/11.20/create_service_account_for_kubernetes.html
      serviceAccount: admin
      containers:
      - name: gameserver-api
        # image: ghcr.io/kondukter-dev/gameserver-api:master
        image: k3d-kondukter:53838/gameserver-api:latest
        # imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
        - containerPort: 5000
