manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gameserver-api
spec:
  selector:
    app: gameserver-api
  ports:
  - port: 5000
    targetPort: 5000
    name: http
